--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.howdy.siminfo"
@@ -24,6 +24,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.blunderer:materialdesignlibrary:2.0.4'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:design:23.1.1'
     compile 'com.google.android.gms:play-services-analytics:8.3.0'
     compile 'com.google.android.gms:play-services-ads:8.3.0'
 
