--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.android.gms:play-services-analytics:8.3.0'
+    compile 'pub.devrel:easypermissions:0.1.5'
     //compile 'com.google.android.gms:play-services-ads:8.3.0'
 
 }
